; ModuleID = '/home/carl/AnghaBench/FFmpeg/fftools/extr_ffprobe.c_writer_close.c'
source_filename = "/home/carl/AnghaBench/FFmpeg/fftools/extr_ffprobe.c_writer_close.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_8__ = type { %struct.TYPE_8__*, %struct.TYPE_7__*, i32* }
%struct.TYPE_7__ = type { i64, i32 (%struct.TYPE_8__*)* }

@SECTION_MAX_NB_LEVELS = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.TYPE_8__**)* @writer_close to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @writer_close(%struct.TYPE_8__** %0) #0 {
  %2 = alloca %struct.TYPE_8__**, align 8
  %3 = alloca i32, align 4
  store %struct.TYPE_8__** %0, %struct.TYPE_8__*** %2, align 8
  %4 = load %struct.TYPE_8__**, %struct.TYPE_8__*** %2, align 8
  %5 = load %struct.TYPE_8__*, %struct.TYPE_8__** %4, align 8
  %6 = icmp ne %struct.TYPE_8__* %5, null
  br i1 %6, label %8, label %7

7:                                                ; preds = %1
  br label %67

8:                                                ; preds = %1
  %9 = load %struct.TYPE_8__**, %struct.TYPE_8__*** %2, align 8
  %10 = load %struct.TYPE_8__*, %struct.TYPE_8__** %9, align 8
  %11 = getelementptr inbounds %struct.TYPE_8__, %struct.TYPE_8__* %10, i32 0, i32 1
  %12 = load %struct.TYPE_7__*, %struct.TYPE_7__** %11, align 8
  %13 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %12, i32 0, i32 1
  %14 = load i32 (%struct.TYPE_8__*)*, i32 (%struct.TYPE_8__*)** %13, align 8
  %15 = icmp ne i32 (%struct.TYPE_8__*)* %14, null
  br i1 %15, label %16, label %26

16:                                               ; preds = %8
  %17 = load %struct.TYPE_8__**, %struct.TYPE_8__*** %2, align 8
  %18 = load %struct.TYPE_8__*, %struct.TYPE_8__** %17, align 8
  %19 = getelementptr inbounds %struct.TYPE_8__, %struct.TYPE_8__* %18, i32 0, i32 1
  %20 = load %struct.TYPE_7__*, %struct.TYPE_7__** %19, align 8
  %21 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %20, i32 0, i32 1
  %22 = load i32 (%struct.TYPE_8__*)*, i32 (%struct.TYPE_8__*)** %21, align 8
  %23 = load %struct.TYPE_8__**, %struct.TYPE_8__*** %2, align 8
  %24 = load %struct.TYPE_8__*, %struct.TYPE_8__** %23, align 8
  %25 = call i32 %22(%struct.TYPE_8__* %24)
  br label %26

26:                                               ; preds = %16, %8
  store i32 0, i32* %3, align 4
  br label %27

27:                                               ; preds = %40, %26
  %28 = load i32, i32* %3, align 4
  %29 = load i32, i32* @SECTION_MAX_NB_LEVELS, align 4
  %30 = icmp slt i32 %28, %29
  br i1 %30, label %31, label %43

31:                                               ; preds = %27
  %32 = load %struct.TYPE_8__**, %struct.TYPE_8__*** %2, align 8
  %33 = load %struct.TYPE_8__*, %struct.TYPE_8__** %32, align 8
  %34 = getelementptr inbounds %struct.TYPE_8__, %struct.TYPE_8__* %33, i32 0, i32 2
  %35 = load i32*, i32** %34, align 8
  %36 = load i32, i32* %3, align 4
  %37 = sext i32 %36 to i64
  %38 = getelementptr inbounds i32, i32* %35, i64 %37
  %39 = call i32 @av_bprint_finalize(i32* %38, i32* null)
  br label %40

40:                                               ; preds = %31
  %41 = load i32, i32* %3, align 4
  %42 = add nsw i32 %41, 1
  store i32 %42, i32* %3, align 4
  br label %27

43:                                               ; preds = %27
  %44 = load %struct.TYPE_8__**, %struct.TYPE_8__*** %2, align 8
  %45 = load %struct.TYPE_8__*, %struct.TYPE_8__** %44, align 8
  %46 = getelementptr inbounds %struct.TYPE_8__, %struct.TYPE_8__* %45, i32 0, i32 1
  %47 = load %struct.TYPE_7__*, %struct.TYPE_7__** %46, align 8
  %48 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %47, i32 0, i32 0
  %49 = load i64, i64* %48, align 8
  %50 = icmp ne i64 %49, 0
  br i1 %50, label %51, label %57

51:                                               ; preds = %43
  %52 = load %struct.TYPE_8__**, %struct.TYPE_8__*** %2, align 8
  %53 = load %struct.TYPE_8__*, %struct.TYPE_8__** %52, align 8
  %54 = getelementptr inbounds %struct.TYPE_8__, %struct.TYPE_8__* %53, i32 0, i32 0
  %55 = load %struct.TYPE_8__*, %struct.TYPE_8__** %54, align 8
  %56 = call i32 @av_opt_free(%struct.TYPE_8__* %55)
  br label %57

57:                                               ; preds = %51, %43
  %58 = load %struct.TYPE_8__**, %struct.TYPE_8__*** %2, align 8
  %59 = load %struct.TYPE_8__*, %struct.TYPE_8__** %58, align 8
  %60 = getelementptr inbounds %struct.TYPE_8__, %struct.TYPE_8__* %59, i32 0, i32 0
  %61 = call i32 @av_freep(%struct.TYPE_8__** %60)
  %62 = load %struct.TYPE_8__**, %struct.TYPE_8__*** %2, align 8
  %63 = load %struct.TYPE_8__*, %struct.TYPE_8__** %62, align 8
  %64 = call i32 @av_opt_free(%struct.TYPE_8__* %63)
  %65 = load %struct.TYPE_8__**, %struct.TYPE_8__*** %2, align 8
  %66 = call i32 @av_freep(%struct.TYPE_8__** %65)
  br label %67

67:                                               ; preds = %57, %7
  ret void
}

declare dso_local i32 @av_bprint_finalize(i32*, i32*) #1

declare dso_local i32 @av_opt_free(%struct.TYPE_8__*) #1

declare dso_local i32 @av_freep(%struct.TYPE_8__**) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
